--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -5,37 +5,39 @@
   color: white;
   display: flex;
   justify-content: center;
+  position: fixed;
   width: 100%;
-
-  * {
-    outline: 1px solid red;
-  }
 }
 
-.hero__inner-container {
+.hero__inner {
+  align-items: center;
   display: flex;
-  width: $max_width;
+  height: 100%;
+  justify-content: center;
+  max-width: $max_width;
+  width: 100%;
 }
 
 .hero__column {
-  height: 100vh;
+  align-items: center;
+  display: flex;
+  height: 100%;
   width: 50%;
 
   &--left {
-    align-items: center;
-    display: flex;
-    justify-content: center;
+    position: relative;
   }
 
   &--right {
     align-items: center;
-    display: flex;
+    flex-direction: column;
     justify-content: center;
   }
 }
 
 .hero__text-container {
   font-weight: 300;
+  text-align: left;
   transform: translateY(-5rem);
   width: 100%;
 }
@@ -50,7 +52,7 @@
     content: '<h1>';
     font-family: 'La Belle Aurore', cursive;
     font-size: 2rem;
-    left: -4rem;
+    left: -5rem;
     position: absolute;
     top: 3.5rem;
   }
@@ -71,6 +73,10 @@
   text-align: right;
 }
 
+.hero__name {
+  color: $teal;
+}
+
 .hero__title-ampersand {
   color: $teal;
   font-size: 3rem;
@@ -79,11 +85,32 @@
 }
 
 .hero__subtitle {
-  font-size: 3rem;
+  color: $charcoal;
+  font-size: 1.8rem;
   font-weight: inherit;
+  letter-spacing: 0.9rem;
+  margin-bottom: 0;
   margin-left: 5rem;
+  white-space: nowrap;
 }
 
 .hero__svg-container {
   transform: translateY(5rem);
+}
+
+.hero__btn {
+  align-self: center;
+  background: transparent;
+  border: 0.2rem solid $teal;
+  color: $teal;
+  font-size: 1.8rem;
+  letter-spacing: 0.9rem;
+  margin: 0;
+  padding: 1rem 2rem;
+  transition: background 0.3s, color 0.3s;
+
+  &:hover {
+    background: $teal;
+    color: white;
+  }
 }
