--- a/src/home.scss
+++ b/src/home.scss
@@ -36,7 +36,7 @@ $slide-number: 3;
   &:first-child {
     transform: translateY(-$parallax-offset / 2);
 
-    .content-wrapper {
+    .parallax-wrapper {
       transform: translateY($parallax-offset / 2);
     }
   }
@@ -49,7 +49,7 @@ $slide-number: 3;
   }
 }
 
-.content {
+.parallax {
   &-wrapper {
     @include transition(
       $transition-speed + 0.5,
@@ -74,14 +74,14 @@ $slide-number: 3;
 .section.up-scroll {
   transform: translate3d(0, -$parallax-offset / 2, 0);
 
-  .content-wrapper {
+  .parallax-wrapper {
     transform: translateY($parallax-offset / 2);
   }
 
   + .section {
     transform: translate3d(0, $parallax-offset, 0);
 
-    .content-wrapper {
+    .parallax-wrapper {
       transform: translateY($parallax-offset);
     }
   }
@@ -90,14 +90,14 @@ $slide-number: 3;
 .section.down-scroll {
   transform: translate3d(0, -(100vh + $parallax-offset), 0);
 
-  .content-wrapper {
+  .parallax-wrapper {
     transform: translateY($content-offset);
   }
 
   + .section:not(.down-scroll) {
     transform: translate3d(0, -$parallax-offset / 2, 0);
 
-    .content-wrapper {
+    .parallax-wrapper {
       transform: translateY($parallax-offset / 2);
     }
   }
