--- a/src/components/slider/dots/dots.scss
+++ b/src/components/slider/dots/dots.scss
@@ -2,11 +2,11 @@
 
 .dot-list {
   display: flex;
-  margin-top: 10rem;
+  margin-top: 5rem;
 }
 
 .dot {
-  background: $charcoal;
+  background: $teal;
   cursor: pointer;
   height: 0.5rem;
   opacity: 0.2;
