--- a/src/components/work/work.scss
+++ b/src/components/work/work.scss
@@ -6,9 +6,25 @@
 }
 
 .work__inner {
-  align-items: center;
-  display: flex;
   height: 100%;
-  justify-content: center;
+  position: relative;
   width: 100%;
+}
+
+.work__title {
+  color: $charcoal;
+  font-size: 25rem;
+  left: -3rem;
+  position: absolute;
+  top: -10rem;
+
+  &::after {
+    bottom: 5rem;
+    color: $teal;
+    content: '</h1>';
+    font-family: 'La Belle Aurore', cursive;
+    font-size: 2rem;
+    position: absolute;
+    right: -6rem;
+  }
 }
