--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -13,6 +13,15 @@
   top: 0;
   width: 8rem;
   z-index: 9999;
+
+  @media (max-width: $mobile) {
+    bottom: 0;
+    flex-direction: row;
+    height: 8rem;
+    right: initial;
+    top: initial;
+    width: 100%;
+  }
 }
 
 .nav__nav-list {
@@ -21,6 +30,11 @@
   top: 50%;
   transform: translateY(-50%);
   width: 100%;
+
+  @media (max-width: $mobile) {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .nav__nav-item {
@@ -39,6 +53,7 @@
   display: flex;
   height: 8rem;
   justify-content: center;
+  width: 8rem;
 }
 
 .nav__icon {
@@ -56,6 +71,10 @@
   height: 8rem;
   justify-content: center;
   width: 100%;
+
+  @media (max-width: $mobile) {
+    display: none;
+  }
 }
 
 .nav__logo-text {
