--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -12,7 +12,6 @@
   height: 100%;
   max-width: $max_width;
   position: relative;
-  width: 100%;
 }
 
 .about__column {
@@ -20,15 +19,31 @@
   display: flex;
   height: 100%;
   width: 50%;
+
+  @media (max-width: $mobile) {
+    align-items: initial;
+    flex-direction: column;
+    height: 50%;
+    justify-content: space-around;
+    margin-top: 10rem;
+
+    &--right {
+      display: none;
+    }
+
+    &--left {
+      width: 100%;
+    }
+  }
 }
 
 .about__title {
   color: #262626;
   font-size: 20rem;
-  left: 10rem;
+  left: 0;
   margin: 0;
   position: absolute;
-  top: 10rem;
+  top: 12rem;
 
   &::before {
     color: $charcoal;
@@ -49,15 +64,30 @@
     left: -5.5rem;
     position: absolute;
   }
+
+  @media (max-width: $mobile) {
+    font-size: 7rem;
+    left: 0;
+    position: relative;
+    top: 0;
+
+    &::before,
+    &::after {
+      display: none;
+    }
+  }
 }
 
-.about__text-container {
-  color: $teal;
-  position: relative;
-  top: 10rem;
+.about__paragraph-container {
+  margin-top: 15rem;
+
+  @media (max-width: $mobile) {
+    margin: initial;
+  }
 }
 
 .about__paragraph {
+  color: $teal;
   line-height: 2;
   margin-left: 5rem;
   position: relative;
@@ -66,6 +96,16 @@
 
   &:first-child {
     left: -5rem;
+  }
+
+  @media (max-width: $mobile) {
+    font-size: 1rem;
+    margin-left: initial;
+    text-indent: initial;
+
+    &:first-child {
+      left: initial;
+    }
   }
 }
 
@@ -141,20 +181,4 @@
 .about__pyramid > div:nth-child(4) {
   border-color: transparent transparent transparent rgba(50, 50, 50, 0.8);
   transform: rotateX(-60deg) rotateY(19.5deg) translateX(-116px) translateY(-200px) translateZ(326px);
-}
-
-@media (max-width: $mobile) {
-  .about__pyramid {
-    display: none;
-  }
-}
-
-@keyframes spin {
-  from {
-    transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
-  }
-
-  to {
-    transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);
-  }
 }
