progress: had a lot of unpushed changes...dont remember what i did..

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -2,8 +2,22 @@
 
 .contact {
   background: $dark;
+  height: 100%;
   position: fixed;
+
+  * {
+    outline: 1px solid red;
+  }
 }
 
 .contact__inner {
+  display: flex;
+  height: 100%;
+}
+
+.contact__column {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  width: 50%;
 }
