--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -182,3 +182,13 @@
   border-color: transparent transparent transparent rgba(50, 50, 50, 0.8);
   transform: rotateX(-60deg) rotateY(19.5deg) translateX(-116px) translateY(-200px) translateZ(326px);
 }
+
+@keyframes spin {
+  0% {
+    transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+  }
+
+  100% {
+    transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);
+  }
+}
