--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -40,9 +40,31 @@
 .nav__nav-item {
   @include transition(0.3);
 
+  animation: slideInLeft 0.3s ease-out forwards;
   cursor: pointer;
   position: relative;
   text-align: center;
+  transform: translateX(8rem);
+
+  &:nth-child(1) {
+    animation-delay: 1.1s;
+  }
+
+  &:nth-child(2) {
+    animation-delay: 0.7s;
+  }
+
+  &:nth-child(3) {
+    animation-delay: 1.3s;
+  }
+
+  &:nth-child(4) {
+    animation-delay: 0.5s;
+  }
+
+  &:nth-child(5) {
+    animation-delay: 0.9s;
+  }
 
   &:hover {
     color: $teal;
@@ -50,12 +72,13 @@
 }
 
 .nav__item-content {
+  @include transition(0.3);
+
   align-items: center;
   display: flex;
   height: 8rem;
   justify-content: center;
-  transition: opacity 0.3s;
-  width: 8rem;
+  right: -8rem;
 
   &.active {
     opacity: 1;
@@ -67,6 +90,16 @@
 
   &--text {
     position: absolute;
+  }
+}
+
+@keyframes slideInLeft {
+  0% {
+    transform: translateX(8rem);
+  }
+
+  100% {
+    transform: translateX(0);
   }
 }
 
