--- a/src/globals.scss
+++ b/src/globals.scss
@@ -1,5 +1,5 @@
 $charcoal: #7c7c7c;
-$dark: #1e1e1e;
+$dark: #2e2e2e;
 $darker: #0e0e0e;
 $darkest: #010101;
 $teal: #0cfdd7;
@@ -18,6 +18,7 @@ $laptop: 1024px;
 *::before,
 *::after {
   box-sizing: border-box;
+  // outline: 1px solid red;
   text-rendering: optimizeLegibility;
 }
 
