--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -3,11 +3,8 @@
 .contact {
   background: $dark;
   height: 100%;
+  // outline: 1px solid red;
   position: fixed;
-
-  * {
-    outline: 1px solid red;
-  }
 }
 
 .contact__inner {
@@ -18,6 +15,122 @@
 .contact__column {
   align-items: center;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  position: relative;
   width: 50%;
+}
+
+.contact__max-width {
+  max-width: $max_width / 2;
+  text-align: left;
+}
+
+.contact__title {
+  color: $teal;
+  font-size: 6rem;
+  font-weight: 900;
+  margin: 5rem 0;
+  position: relative;
+
+  &::before {
+    color: $charcoal;
+    content: '<h1>';
+    font-family: 'La Belle Aurore', cursive;
+    font-size: 2rem;
+    left: 0;
+    position: absolute;
+    top: -1.5rem;
+  }
+
+  &::after {
+    bottom: -2.5rem;
+    color: $charcoal;
+    content: '</h1>';
+    font-family: 'La Belle Aurore', cursive;
+    font-size: 2rem;
+    left: -2rem;
+    position: absolute;
+  }
+}
+
+.contact__paragraph {
+  line-height: 2.5rem;
+}
+
+.contact__form {
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 3fr;
+  margin-top: 3rem;
+}
+
+.contact__field {
+  height: 100%;
+  width: 100%;
+
+  &:nth-child(1) {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  &:nth-child(2) {
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+
+  &:nth-child(3) {
+    grid-column: 1/3;
+    grid-row: 2/3;
+  }
+
+  &:nth-child(4) {
+    grid-column: 1/3;
+    grid-row: 3/4;
+  }
+
+  input,
+  textarea {
+    background: #2b2b2b;
+    border: 0;
+    height: 100%;
+    padding: 1.7rem;
+    width: 100%;
+  }
+}
+
+.contact__maps {
+  height: 100%;
+  width: 100%;
+}
+
+.contact__info {
+  background: $darker;
+  border-bottom-right-radius: 3px;
+  font-weight: 300;
+  left: 0;
+  letter-spacing: 1rem;
+  line-height: 3rem;
+  padding: 1rem 2rem;
+  position: absolute;
+  text-align: left;
+  top: 0;
+
+  svg {
+    color: $teal;
+    position: absolute;
+    right: 40px;
+    top: 20px;
+  }
+}
+
+.contact__email {
+  letter-spacing: 0.3rem;
+  margin: 0;
+
+  span {
+    color: $teal;
+    margin: 0;
+  }
 }
