--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,5 +1,7 @@
 @import '../../globals';
 
+$item_width: 7rem;
+
 .nav {
   align-items: center;
   background: $darker;
@@ -11,13 +13,13 @@
   position: fixed;
   right: 0;
   top: 0;
-  width: 8rem;
+  width: $item_width;
   z-index: 9999;
 
   @media (max-width: $mobile) {
     bottom: 0;
     flex-direction: row;
-    height: 8rem;
+    height: $item_width;
     right: initial;
     top: initial;
     width: 100%;
@@ -25,46 +27,13 @@
 }
 
 .nav__nav-list {
-  position: absolute;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 100%;
-
-  @media (max-width: $mobile) {
-    display: flex;
-    justify-content: center;
-  }
+  position: relative;
 }
 
 .nav__nav-item {
-  @include transition(0.3);
-
-  animation: slideInLeft 0.3s ease-out forwards;
-  cursor: pointer;
+  height: $item_width;
   position: relative;
-  text-align: center;
-  transform: translateX(8rem);
-
-  &:nth-child(1) {
-    animation-delay: 1.1s;
-  }
-
-  &:nth-child(2) {
-    animation-delay: 0.7s;
-  }
-
-  &:nth-child(3) {
-    animation-delay: 1.3s;
-  }
-
-  &:nth-child(4) {
-    animation-delay: 0.5s;
-  }
-
-  &:nth-child(5) {
-    animation-delay: 0.9s;
-  }
+  width: $item_width;
 
   &:hover {
     color: $teal;
@@ -72,13 +41,20 @@
 }
 
 .nav__item-content {
-  @include transition(0.3);
-
   align-items: center;
+  cursor: pointer;
   display: flex;
-  height: 8rem;
+  height: 100%;
   justify-content: center;
-  right: -8rem;
+  position: absolute;
+  transition: opacity 0.8s;
+  width: 100%;
+
+  svg {
+    height: 100%;
+    padding: 2rem;
+    width: 100%;
+  }
 
   &.active {
     opacity: 1;
@@ -87,26 +63,6 @@
   &.hidden {
     opacity: 0;
   }
-
-  &--text {
-    position: absolute;
-  }
-}
-
-@keyframes slideInLeft {
-  0% {
-    transform: translateX(8rem);
-  }
-
-  100% {
-    transform: translateX(0);
-  }
-}
-
-.nav__icon {
-  height: 100%;
-  padding: 2.5rem;
-  width: 100%;
 }
 
 .nav__logo-container {
@@ -115,7 +71,7 @@
   color: $teal;
   display: flex;
   flex-direction: column;
-  height: 8rem;
+  height: $item_width;
   justify-content: center;
   width: 100%;
 
