--- a/src/globals.scss
+++ b/src/globals.scss
@@ -24,7 +24,7 @@ $laptop: 1024px;
 
 html,
 body {
-  background: $dark;
+  background: $darker;
   box-sizing: border-box;
   font-family: 'Montserrat', Arial, Helvetica, sans-serif;
   font-size: 10px;
