--- a/src/components/skills/tag-cloud/tag-cloud.scss
+++ b/src/components/skills/tag-cloud/tag-cloud.scss
@@ -1,10 +1,6 @@
-.tag-cloud__container {
-  align-items: center;
-  display: flex;
-  height: 100%;
-  justify-content: center;
+.tag-cloud__inner {
+  cursor: pointer;
   position: relative;
-  width: 100%;
 }
 
 .tag-cloud__item {
