--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -2,49 +2,56 @@
 
 .about {
   background: $darker;
+}
+
+.about__outer {
+  align-items: center;
+  background: $darker;
   display: flex;
+  height: 100%;
   justify-content: center;
-  overflow: hidden;
-  position: fixed;
 }
 
 .about__inner {
-  height: 100%;
+  align-items: center;
+  display: flex;
+  height: 90%;
+  justify-content: center;
+  margin-right: 7rem;
   max-width: $max_width;
-  position: relative;
+  width: 90%;
+
+  @media (max-width: $mobile) {
+    flex-direction: column;
+    margin-right: initial;
+  }
 }
 
 .about__column {
-  align-items: center;
   display: flex;
   height: 100%;
-  width: 50%;
+
+  &--left {
+    flex-direction: column;
+    justify-content: center;
+    width: 60%;
+  }
+
+  &--right {
+    width: 40%;
+  }
 
   @media (max-width: $mobile) {
-    align-items: initial;
-    flex-direction: column;
-    height: 50%;
-    justify-content: space-around;
-    margin-top: 10rem;
+    height: 100%;
+    width: 100%;
 
     &--right {
       display: none;
-    }
-
-    &--left {
-      width: 100%;
     }
   }
 }
 
 .about__title {
-  color: #262626;
-  font-size: 20rem;
-  left: 0;
-  margin: 0;
-  position: absolute;
-  top: 12rem;
-
   &::before {
     color: $charcoal;
     content: '<h1>';
@@ -78,41 +85,17 @@
   }
 }
 
-.about__paragraph-container {
-  margin-top: 15rem;
-
-  @media (max-width: $mobile) {
-    margin: initial;
-  }
-}
-
 .about__paragraph {
   color: $teal;
   line-height: 2;
-  margin-left: 5rem;
   position: relative;
-  text-indent: 5rem;
   z-index: 1;
-
-  &:first-child {
-    left: -5rem;
-  }
-
-  @media (max-width: $mobile) {
-    font-size: 1rem;
-    margin-left: initial;
-    text-indent: initial;
-
-    &:first-child {
-      left: initial;
-    }
-  }
 }
 
 .about__pyramid {
   animation: spin 10s linear infinite;
   height: 500px;
-  left: 50%;
+  left: 60%;
   margin-left: 120px;
   margin-top: -210px;
   position: absolute;
