--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -2,51 +2,29 @@
 
 .skills {
   background: $dark;
-  display: flex;
-  justify-content: center;
-  position: fixed;
-}
-
-.skills__background {
-  height: 100%;
-  position: absolute;
-  width: 100%;
-}
-
-.skills__overlay {
-  background: $darker;
-  height: 100%;
-  left: 0;
-  opacity: 0.9;
-  position: absolute;
-  top: 0;
-  width: 100%;
 }
 
 .skills__outer {
   align-items: center;
+  background: $dark;
   display: flex;
   height: 100%;
   justify-content: center;
-  width: 100vw;
 }
 
 .skills__inner {
   align-items: center;
-  background: transparent;
   display: flex;
   height: 90%;
   justify-content: center;
+  margin-right: 7rem;
+  max-width: $max_width;
   padding: 0 5rem;
-  position: relative;
   width: 90%;
 
   @media (max-width: $mobile) {
     flex-direction: column;
-  }
-
-  @media (min-width: $tablet) {
-    margin-right: 7rem;
+    margin-right: initial;
   }
 }
 
@@ -56,6 +34,7 @@
 
   &--right {
     flex-direction: column;
+    margin-left: 5rem;
     position: relative;
     width: 60%;
   }
@@ -65,6 +44,7 @@
   }
 
   @media (max-width: $mobile) {
+    margin-left: initial;
     width: 100%;
 
     &--right {
@@ -84,7 +64,7 @@
   font-weight: 900;
   position: relative;
   text-align: left;
-  transform: translateX(-5rem);
+  width: 100%;
 
   &::before {
     color: $charcoal;
@@ -123,10 +103,10 @@
 
 .skills__paragraph {
   line-height: 2;
+  margin: initial 0;
   position: relative;
   text-align: left;
   text-indent: 3rem;
-  transform: translateX(5rem);
   z-index: 1;
 
   @media (max-width: $mobile) {
