--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -2,7 +2,6 @@
 
 .slider {
   align-items: flex-end;
-  background: $darker;
   display: flex;
   height: 100%;
   justify-content: center;
@@ -20,9 +19,10 @@
   display: flex;
   justify-content: center;
   left: 0;
+  max-width: $max_width;
   position: relative;
   top: 0;
-  width: $max_width;
+  width: 100%;
 }
 
 .slider__button {
