--- a/src/components/work/work.scss
+++ b/src/components/work/work.scss
@@ -2,13 +2,27 @@
 
 .work {
   background: $darker;
-  position: fixed;
+}
+
+.work__outer {
+  align-items: center;
+  background: $darker;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  width: 100%;
 }
 
 .work__inner {
-  height: 100%;
+  height: 90%;
+  margin-right: 7rem;
   position: relative;
-  width: 100%;
+  width: 90%;
+
+  @media (max-width: $mobile) {
+    flex-direction: column;
+    margin-right: initial;
+  }
 }
 
 .work__title {
@@ -16,7 +30,7 @@
   font-size: 25rem;
   left: -3rem;
   position: absolute;
-  top: -10rem;
+  top: -15rem;
 
   &::after {
     bottom: 5rem;
