--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -45,8 +45,12 @@
   }
 
   @media (max-width: $mobile) {
-    height: 50%;
+    height: 100%;
     width: 100%;
+
+    &--left {
+      display: none;
+    }
   }
 }
 
@@ -126,14 +130,13 @@
 
 .hero__svg-container {
   position: relative;
-  width: 100%;
+  width: 55rem;
 
   @media (max-width: $mobile) {
     left: 50%;
     position: absolute;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: 35rem;
   }
 
   svg {
