--- a/src/components/hero/horizontal-screen/horizontal-screen.scss
+++ b/src/components/hero/horizontal-screen/horizontal-screen.scss
@@ -1,7 +1,7 @@
 @import '../../../globals';
 
-$screen_height: 80px;
-$screen_width: 160px;
+$screen_height: 8rem;
+$screen_width: 16rem;
 
 @keyframes infiniteSlideB {
   0% {
@@ -20,7 +20,7 @@ $screen_width: 160px;
   flex-direction: column;
   justify-content: center;
   position: absolute;
-  transform: translate(90px, -291px);
+  transform: translate(12rem, -26.9rem);
 }
 
 .screen-horizontal__inner {
@@ -57,8 +57,8 @@ $screen_width: 160px;
 .screen-horizontal__base {
   background: $darker;
   border: 10px solid $darkest;
-  border-left-color: #161616;
-  border-right-color: #161616;
+  border-left-color: $dark;
+  border-right-color: $dark;
   border-top: 0;
   height: 20px;
   position: relative;
