--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -52,6 +52,12 @@
 }
 
 .about__title {
+  color: $dark;
+  font-size: 20rem;
+  left: -2rem;
+  position: absolute;
+  top: 7rem;
+
   &::before {
     color: $charcoal;
     content: '<h1>';
@@ -68,8 +74,9 @@
     content: '</h1>';
     font-family: 'La Belle Aurore', cursive;
     font-size: 2rem;
-    left: -5.5rem;
     position: absolute;
+    right: -2rem;
+    top: 2rem;
   }
 
   @media (max-width: $mobile) {
@@ -89,7 +96,23 @@
   color: $teal;
   line-height: 2;
   position: relative;
+  text-align: left;
+  text-indent: 3rem;
   z-index: 1;
+
+  &:last-child {
+    transform: translateX(5rem);
+  }
+
+  @media (max-width: $mobile) {
+    line-height: 1.5;
+    text-align: center;
+    text-indent: initial;
+
+    &:last-child {
+      transform: translateX(0);
+    }
+  }
 }
 
 .about__pyramid {
