--- a/src/components/hero/workstation/workstation.scss
+++ b/src/components/hero/workstation/workstation.scss
@@ -7,7 +7,7 @@
   height: 100%;
   justify-content: center;
   left: 50%;
-  max-width: calc($max_width / 2);
+  max-width: calc(1400rem / 2);
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
