progress: change font weight on hero

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -60,8 +60,8 @@
 }
 
 .hero__title {
-  font-size: 5rem;
-  font-weight: inherit;
+  font-size: 7rem;
+  font-weight: 800;
   position: relative;
   text-align: left;
 
@@ -72,17 +72,17 @@
     font-size: 2rem;
     left: -4rem;
     position: absolute;
-    top: 3.5rem;
+    top: 5rem;
   }
 
   &::after {
-    bottom: 0;
+    bottom: 0.5rem;
     color: $charcoal;
     content: '</h1>';
     font-family: 'La Belle Aurore', cursive;
     font-size: 2rem;
     position: absolute;
-    right: 12rem;
+    right: 4rem;
   }
 
   @media (max-width: $mobile) {
