--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -1,151 +1,149 @@
 @import '../../globals';
 
 .slider {
-  align-items: flex-end;
-  display: flex;
-  height: 100%;
-  justify-content: center;
-  width: 100%;
+    align-items: flex-end;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    width: 100%;
 }
 
 .slider__container {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  position: relative;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    position: relative;
 }
 
 .slider__track {
-  display: flex;
-  justify-content: center;
-  left: 0;
-  max-width: $max_width;
-  position: relative;
-  top: 0;
-  width: 100%;
+    display: flex;
+    justify-content: center;
+    left: 0;
+    max-width: $max_width;
+    position: relative;
+    top: 0;
+    width: 100%;
 }
 
 .slider__button {
-  align-items: center;
-  background: $darker;
-  border: 0.2rem solid $teal;
-  border-radius: 50%;
-  color: $teal;
-  cursor: pointer;
-  display: flex;
-  font-size: 3rem;
-  height: 5rem;
-  justify-content: center;
-  left: 1rem;
-  position: absolute;
-  top: 25rem;
-  width: 5rem;
-  z-index: 1;
+    align-items: center;
+    background: $darker;
+    border: 0.2rem solid $teal;
+    border-radius: 50%;
+    color: $teal;
+    cursor: pointer;
+    display: flex;
+    font-size: 3rem;
+    height: 5rem;
+    justify-content: center;
+    left: 1rem;
+    position: absolute;
+    top: 25rem;
+    width: 5rem;
+    z-index: 1;
 
-  &:last-child {
-    left: initial;
-    right: 1rem;
-  }
+    &:last-child {
+        left: initial;
+        right: 1rem;
+    }
 
-  &:hover {
-    background: $darkest;
-  }
+    &:hover {
+        background: $darkest;
+    }
 }
 
 .slider__list {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  justify-content: center;
-  max-width: var(--max-width);
-  padding: 5rem 0;
-  position: relative;
-  transition: transform 0.5s;
-  width: 100%;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    justify-content: center;
+    max-width: var(--max-width);
+    padding: 5rem 0;
+    position: relative;
+    transition: transform 0.5s;
+    width: 100%;
 }
 
 .slider__list-item {
-  height: 375px;
-  perspective: 600px;
-  width: 300px;
+    height: 375px;
+    perspective: 600px;
+    width: 300px;
 }
 
 .slider__card {
-  background: $dark;
-  box-shadow: 0 0 1rem 0.2rem rgba(0, 0, 0, 0.4);
-  cursor: pointer;
-  height: 100%;
-  position: relative;
-  transform: scale(0.8);
-  transform-style: preserve-3d;
-  transition: transform 1s;
-  width: 100%;
+    background: $dark;
+    box-shadow: 0 0 1rem 0.2rem rgba(0, 0, 0, 0.4);
+    cursor: pointer;
+    height: 100%;
+    position: relative;
+    transform: scale(0.8);
+    transform-style: preserve-3d;
+    transition: transform 1s;
+    width: 100%;
 
-  &.is-center {
-    transform: scale(1.2);
-
-    &:hover img {
-      transform: scale(1.2);
+    &.is-center {
+        transform: scale(1.2);
     }
-  }
 
-  &.is-left-outer-card {
-    transform: rotateY(30deg) scale(0.78);
-  }
+    &.is-center:hover img {
+        transform: scale(1.2);
+    }
 
-  &.is-right-outer-card {
-    transform: rotateY(-30deg) scale(0.78);
-  }
+    &.is-left-outer-card {
+        transform: rotateY(30deg) scale(0.78);
+    }
 
-  &.is-left-inner-card {
-    transform: rotateY(30deg) scale(0.8);
-  }
+    &.is-right-outer-card {
+        transform: rotateY(-30deg) scale(0.78);
+    }
 
-  &.is-right-inner-card {
-    transform: rotateY(-30deg) scale(0.8);
-  }
+    &.is-left-inner-card {
+        transform: rotateY(30deg) scale(0.8);
+    }
+
+    &.is-right-inner-card {
+        transform: rotateY(-30deg) scale(0.8);
+    }
 }
 
 .slider__card-face {
-  align-items: center;
-  backface-visibility: hidden;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  justify-content: center;
-  position: relative;
-  width: 100%;
+    align-items: center;
+    backface-visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    position: relative;
+    width: 100%;
 }
 
 .slider__card-header {
-  flex: 9;
-  height: 100%;
-  overflow: hidden;
-  width: 100%;
+    flex: 9;
+    height: 100%;
+    overflow: hidden;
+    width: 100%;
 }
 
 .slider__card-image {
-  height: 100%;
-  object-fit: cover;
-  transition: 0.3s ease;
-  width: 100%;
+    transition: 0.3s ease;
+    width: 100%;
 }
 
 .slider__card-body {
-  align-items: center;
-  background: $dark;
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  font-size: 1.5rem;
-  justify-content: center;
-  padding: 1rem 0;
-  width: 100%;
+    align-items: center;
+    background: $dark;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    font-size: 1.5rem;
+    justify-content: center;
+    padding: 1rem 0;
+    width: 100%;
 }
 
 .slider__card-text {
-  font-weight: 400;
+    font-weight: 400;
 
-  &:last-child {
-    font-weight: 500;
-  }
+    &:last-child {
+        font-weight: 500;
+    }
 }
