progress: modal for projects

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -9,7 +9,7 @@
 .contact__inner {
     display: flex;
     height: 100%;
-    max-width: $max_width;
+    max-width: $max-width;
     width: 100%;
 }
 
