--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -18,7 +18,7 @@
     height: 90%;
     justify-content: center;
     margin-right: 7rem;
-    max-width: $max_width;
+    max-width: $max-width;
     padding: 0 5rem;
     width: 90%;
 
