--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -18,7 +18,7 @@
     height: 90%;
     justify-content: center;
     margin-right: 7rem;
-    max-width: $max_width;
+    max-width: $max-width;
     width: 90%;
 
     @media (max-width: $mobile) {
