--- a/src/components/hero/workstation/workstation.scss
+++ b/src/components/hero/workstation/workstation.scss
@@ -22,14 +22,14 @@
 }
 
 .desk__table-top {
-    background: $off_white;
+    background: $off-white;
     height: 1rem;
     position: relative;
     transform: translateY(-0.5rem);
     width: 100%;
 
     &::before {
-        background: $off_white;
+        background: $off-white;
         content: '';
         height: 15rem;
         left: 5.5rem;
@@ -39,8 +39,8 @@
     }
 
     &::after {
-        background: $off_white;
-        border-top: 0.1rem solid $light_gray;
+        background: $off-white;
+        border-top: 0.1rem solid $light-gray;
         content: '';
         height: 0.5rem;
         left: 50%;
@@ -53,7 +53,7 @@
 
 .desk__drawer {
     align-items: center;
-    background: $off_white;
+    background: $off-white;
     display: flex;
     flex-direction: column;
     height: 15rem;
@@ -74,7 +74,7 @@
     width: 8rem;
 
     &::before {
-        background: $off_white;
+        background: $off-white;
         border-radius: 0 0 0.75rem 0.75rem;
         content: '';
         height: 1rem;
@@ -107,7 +107,7 @@
     width: 100%;
 
     &::before {
-        background: $light_gray;
+        background: $light-gray;
         bottom: -1.5rem;
         content: '';
         height: 1.5rem;
@@ -126,7 +126,7 @@
     width: 100%;
 
     &::before {
-        background: $light_gray;
+        background: $light-gray;
         bottom: -0.3rem;
         content: '';
         height: 0.3rem;
@@ -137,7 +137,7 @@
     }
 
     &::after {
-        background: $light_gray;
+        background: $light-gray;
         bottom: -1.3rem;
         content: '';
         height: 1rem;
@@ -156,14 +156,14 @@
 }
 
 .chair__tripod-center {
-    background: $light_gray;
+    background: $light-gray;
     clip-path: polygon(20% 0%, 80% 0%, 60% 100%, 40% 100%);
     height: 6.2rem;
     width: 1.7rem;
 }
 
 .chair__tripod-leg {
-    background: $light_gray;
+    background: $light-gray;
     bottom: 0;
     clip-path: polygon(100% 39%, 100% 58%, 46% 100%, 40% 100%);
     height: 4rem;
@@ -173,7 +173,7 @@
     z-index: 100;
 
     &--right {
-        background: $light_gray;
+        background: $light-gray;
         left: initial;
         right: -3.3rem;
         transform: rotateY(180deg);
@@ -304,7 +304,7 @@ $vertical_screen_width: 12rem;
 }
 
 .my-stuff__coffee {
-    background: $off_white;
+    background: $off-white;
     border-radius: 0.2rem 0.2rem 1rem 1rem;
     bottom: -15.4rem;
     height: 4rem;
@@ -313,7 +313,7 @@ $vertical_screen_width: 12rem;
     width: 3rem;
 
     &::before {
-        background: $light_gray;
+        background: $light-gray;
         border-radius: 3rem;
         content: '';
         height: 80%;
@@ -324,7 +324,7 @@ $vertical_screen_width: 12rem;
     }
 
     &::after {
-        background: $light_gray;
+        background: $light-gray;
         border-radius: 3rem;
         bottom: 0.1rem;
         content: '';
@@ -337,7 +337,7 @@ $vertical_screen_width: 12rem;
 }
 
 .my-stuff__coffee-handle {
-    background: $off_white;
+    background: $off-white;
     border-radius: 50%;
     content: '';
     height: 2.5rem;
@@ -361,7 +361,7 @@ $vertical_screen_width: 12rem;
 }
 
 .my-stuff__coffee-steam {
-    color: $off_white;
+    color: $off-white;
     font-family: 'Caveat', cursive;
     font-size: 3rem;
     left: 50%;
