--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -11,7 +11,7 @@
         left: 4rem;
         position: fixed;
         top: 3.5rem;
-        z-index: 9997;
+        z-index: 10;
     }
 
     &::after {
@@ -22,7 +22,7 @@
         font-size: 2rem;
         left: 4rem;
         position: fixed;
-        z-index: 9997;
+        z-index: 10;
     }
 
     @media (max-width: $mobile) {
@@ -34,4 +34,8 @@
             display: none;
         }
     }
+}
+
+.layout__main {
+    position: relative;
 }
