--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -1,5 +1,9 @@
 @import '../../globals';
 
+$card-body-height: 57px;
+$card-width: 375px;
+$card-height: 300px + $card-body-height;
+
 .slider {
     align-items: flex-end;
     display: flex;
@@ -19,7 +23,7 @@
     display: flex;
     justify-content: center;
     left: 0;
-    max-width: $max_width;
+    max-width: $max-width;
     position: relative;
     top: 0;
     width: 100%;
@@ -64,45 +68,9 @@
 }
 
 .slider__list-item {
-    height: 375px;
-    perspective: 600px;
-    width: 300px;
-}
-
-.slider__card {
-    background: $dark;
-    box-shadow: 0 0 1rem 0.2rem rgba(0, 0, 0, 0.4);
-    cursor: pointer;
-    height: 100%;
-    position: relative;
-    transform: scale(0.8);
-    transform-style: preserve-3d;
-    transition: transform 1s;
-    width: 100%;
-
-    &.is-center {
-        transform: scale(1.2);
-    }
-
-    &.is-center:hover img {
-        transform: scale(1.2);
-    }
-
-    &.is-left-outer-card {
-        transform: rotateY(30deg) scale(0.78);
-    }
-
-    &.is-right-outer-card {
-        transform: rotateY(-30deg) scale(0.78);
-    }
-
-    &.is-left-inner-card {
-        transform: rotateY(30deg) scale(0.8);
-    }
-
-    &.is-right-inner-card {
-        transform: rotateY(-30deg) scale(0.8);
-    }
+    height: $card-height;
+    perspective: 337.5px;
+    width: $card-width;
 }
 
 .slider__card-face {
@@ -120,10 +88,30 @@
     flex: 9;
     height: 100%;
     overflow: hidden;
+    position: relative;
     width: 100%;
+
+    &::before {
+        align-items: center;
+        background: rgba(0, 0, 0, 0.8);
+        content: 'View Details';
+        display: flex;
+        height: calc(100% + 2px);
+        justify-content: center;
+        left: -1px;
+        opacity: 0;
+        overflow: hidden;
+        position: absolute;
+        top: -1px;
+        transition: all 0.3s;
+        width: calc(100% + 2px);
+    }
 }
 
 .slider__card-image {
+    height: 100%;
+    object-fit: cover;
+    overflow: hidden;
     transition: 0.3s ease;
     width: 100%;
 }
@@ -145,5 +133,47 @@
 
     &:last-child {
         font-weight: 500;
+    }
+}
+
+.slider__card {
+    background: $dark;
+    box-shadow: 0 0 1rem 0.2rem rgba(0, 0, 0, 0.4);
+    cursor: pointer;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+    transform: scale(0.8);
+    transform-style: preserve-3d;
+    transition: transform 1s;
+    width: 100%;
+
+    &.is-center {
+        transform: scale(1.2);
+    }
+
+    &.is-center:hover .slider__card-header::before {
+        opacity: 1;
+        z-index: 999;
+    }
+
+    &.is-center:hover .slider__card-image {
+        transform: scale(1.2);
+    }
+
+    &.is-left-outer-card {
+        transform: rotateY(30deg) scale(0.78);
+    }
+
+    &.is-right-outer-card {
+        transform: rotateY(-30deg) scale(0.78);
+    }
+
+    &.is-left-inner-card {
+        transform: rotateY(30deg) scale(0.8);
+    }
+
+    &.is-right-inner-card {
+        transform: rotateY(-30deg) scale(0.8);
     }
 }
