--- a/src/globals.scss
+++ b/src/globals.scss
@@ -2,11 +2,11 @@ $charcoal: #7c7c7c;
 $dark: #1e1e1e;
 $darker: #0e0e0e;
 $darkest: #010101;
-$light_gray: #b0bec5;
-$off_white: #dfdfdf;
+$light-gray: #b0bec5;
+$off-white: #dfdfdf;
 $teal: #0cfdd7;
 
-$max_width: 1400rem;
+$max-width: 1400rem;
 
 $mobile: 425px;
 $tablet: 768px;
